# moo

./: FUTURE_WORK.md  Makefile  README.md  setup.cfg  setup.py
moo/: visualizations.py
moo/nn/: attribution.py  distributions.py  quantities.py  slices.py
moo/nn/backend/: __init__.py
moo/nn/models/: __init__.py  _model_base.py  keras.py  keras_utils.py  pytorch.py  tensorflow_v1.py  tensorflow_v2.py
moo/utils/: nlp.py  test.py  tru_logger.py  typing.py
notebooks/: intro_demo_pytorch.ipynb  intro_demo_tf2_keras.ipynb  nlp_demo_pytorch.ipynb  nlp_demo_tf2.ipynb
notebooks/cuda/: devices_pytorch.ipynb  memtest_pytorch.ipynb
notebooks/overfitting/: overfitting_and_conceptual_soundness.ipynb
tests/keras/unit/: attribution_axioms_test.py  backend_test.py  batch_tests.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  keras_model_test.py  qoi_test.py
tests/pytorch/unit/: attribution_axioms_test.py  backend_test.py  batch_test.py  determinism_test.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  model_wrapper_test.py  multi_qoi_test.py  qoi_test.py
tests/tf/unit/: attribution_axioms_test.py  batch_tests.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  model_wrapper_test.py  qoi_test.py
tests/unit/: attribution_axioms_test_base.py  backend_test_base.py  batch_test_base.py  determinism_test_base.py  doi_test_base.py  environment_test_base.py  model_wrapper_test_base.py  multi_qoi_test_base.py  qoi_test_base.py
tools/: conda_python38.yaml  conda_python3_10.yaml
(+28 files in other folders)
