[metadata]
name = moo
version = attr: moo.__version__
url = https://github.com/nikhil-vytla/moo
license = MIT
author = Nikhil Vytla
author_email =
description = Neural network interpretability library for understanding deep learning model predictions through gradient-based attribution methods.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
